Memento implemented for price rate changing via command (CVP command implemented).